--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
 </head>
 <body class="homepage is-preload">
 
+ <p class="notice"><%= notice %></p>
+ <p class="alert"><%= alert %></p>
+
 <%= yield %>
 <%= javascript_include_tag 'application' %>
 
