--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -15,10 +15,16 @@
        <h2>Summary</h2>
        <%= render 'gadgets/reason' %>
 
+       <% if @gadget.gg_youtube01.present? %>
        <div class="video-container">
         <iframe width="560" height="315" src="<%= @gadget.gg_youtube01 %>" frameborder="0"encrypted-media" allowfullscreen></iframe>
+       </div>
+       <% end %>
+       <% if @gadget.gg_youtube01.present? %>
+       <div class="video-container">
         <iframe width="560" height="315" src="<%= @gadget.gg_youtube02 %>" frameborder="0"encrypted-media" allowfullscreen></iframe>
        </div>
+       <% end %>
       
        <h2>Source</h2>
        <%= render 'gadgets/source' %>
