--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :gg_intro, label: 'Intro' %>
     <%= f.input :gg_img, label: 'Image URL' %>
     <%= f.input :gg_url, label: 'Product URL' %>
-    <%= f.input :gg_from, label: 'Product Site' %>
+    <%= f.input :gg_from, label: 'Product Source' %>
    </div>
    
    <div class="form_border">
