--- a/app/views/gadgets/_content.html.erb
+++ b/app/views/gadgets/_content.html.erb
@@ -1,11 +1,12 @@
 <div class="show_detail">
-  <div class="show_image">
-   <img src="<%= @gadget.gg_img %>">
-  </div>
-  <div class="show_content">
-   <h1><%= @gadget.gg_title %></h1>
-   <p><%= @gadget.gg_intro %></p>
-   <p>by<%= @gadget.user.name %></p>
-   <a href="#" class="button icon">$100.00 from Amazon</a>
-  </div>
+ <div class="show_image">
+  <img src="<%= @gadget.gg_img %>">
+ </div>
+ <div class="show_content">
+  <h1><%= @gadget.gg_title %></h1>
+  <h3>What's This?</h3>
+  <p><%= @gadget.gg_intro %></p>
+  <p>by<%= @gadget.user.name %></p>
+  <a href="<%= @gadget.gg_url %>" class="button icon">$<%= @gadget.gg_aprice %> from <%= @gadget.gg_from %></a>
+ </div>
 </div>
