--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,6 +1,36 @@
+<div id="page-wrapper">
+ <%= render 'shared/header' %>
+ <section id="main">
+  <div class="container">
+   <div class="row">
+    
+    <% @gadgets.each do |gadget| %>
+      <div class="col-4 col-6-medium col-12-small">
+        <section>
+          <div class="gadget_img">
+           <%= link_to (image_tag gadget.gg_img), gadget_path(gadget), :class => "image featured" %>
+          </div>
+          <header>
+            <h3><%= link_to gadget.gg_title, gadget %></h3>
+          </header>
+          <p class="gadget_intro"><%= gadget.gg_intro %></p>
+        </section>
+      </div>
+    <% end %>
 
-<% @gadgets.each do |gadget| %>
- <h2><%= link_to gadget.gg_title, gadget %></h2>
-<% end %>
+    <div class="col-4 col-6-medium col-12-small">
+      <section>
+        <a href="#" class="image featured"><img src="//source.unsplash.com/500x304"" alt="" /></a>
+        <header>
+          <h3>Okay, so what is this?</h3>
+        </header>
+        <p>이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과, 새겨지는 풀이 있습니다. 둘 것은 무엇인지 버리었습니다. 위에도 비둘기, 이제 헤는 걱정도 어머님, 버리었습니다. 토끼, 마리아 멀리 언덕 한 이름을 있습니다. 소녀들의 별을 걱정도 어머님, 아이들의 계십니다. 이제 이 아름다운 있습니다.</p>
+      </section>
+    </div>
 
-<%= link_to "Add New Gadget", new_gadget_path %>
+    
+    <%= link_to "Add New Gadget", new_gadget_path %>
+  </div>
+ </div>
+</section>
+</div>
