--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -47,18 +47,18 @@
 </div>
 
 <!-- Social Shring -->
-<ul class="social">
-  <!-- FaceBook -->
+<!-- <ul class="social">
+
   <a class="facebook" id="shareFB" href="https://www.facebook.com/sharer/sharer.php?u=<%= url_for([@gadget, { 
    only_path: false }]) %>&t=<%= @gadget.gg_title %>"
    onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"   target="_blank" title="Share on Facebook"><li><i class="fa fa-facebook"></i><span>Share on Facebook</span></a></li></a>
   <script type="text/javascript">document.getElementById("shareFB").setAttribute("href", "https://www.facebook.com/sharer/sharer.php?u=" + document.URL);
   </script>
-  <!-- Twitter -->
+
   <a class="twitter" href="https://twitter.com/share?url=<%= url_for([@gadget, { 
    only_path: false }]) %>&via=ohigottabuythis&text=<%= @gadget.gg_title %>"
    onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
    target="_blank" title="Share on Twitter">
    <li><i class="fa fa-twitter"></i><span>Share on Twitter</span></a></li>
   </a>
-</ul>
+</ul> -->
