--- a/app/assets/stylesheets/gadgets.scss
+++ b/app/assets/stylesheets/gadgets.scss
@@ -6,7 +6,7 @@
 /* ================
  line-number :2
  ================= */
-.gadget_title {
+.main_title {
   overflow: hidden; 
   text-overflow: ellipsis; 
   display: -webkit-box;
@@ -22,7 +22,7 @@
 /* ================
  line-number :3
  ================= */
-.gadget_intro {
+.main_intro {
   overflow: hidden; 
   text-overflow: ellipsis; 
   display: -webkit-box;
@@ -36,8 +36,24 @@
 }
 
 /* =============== Index Page  =============== */
-.gadget_img {
-  width: 100%;
+.main_gadget {
+  height: 250px;
+}
+.main_gadget img {
+  height: 100%;
+  object-fit: contain;
+}
+.main_price {
+  float: left;
+  width: 40%;
+  margin-top: 1.4em;
+}
+.main_price p:nth-child(1) {
+  font-size: 1.5em;
+}
+.main_button {
+  float: right;
+  width: 50%;
 }
 
 /* =============== Gadget From =============== */
@@ -71,10 +87,17 @@
   padding: 1%;
   margin-right: 2%;
 }
+.show_content h1 {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
 .show_image img {
   width: 100%;
   height: 300px;
   object-fit: contain;
+}
+.show_image p {
+  margin-top: -2em;
 }
 .video-container {
   margin-bottom: 1em;
@@ -89,11 +112,24 @@
   border: 2px solid;
   padding: 1em;
 }
-@media screen and (max-width: 500px) {
-.show_image, 
-.show_content {
-  width: 100%;
+.main_price ul {
+  padding: 0em;
 }
+.main_price ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 0em;
+  margin: 0em;
+}
+.main_price ul li:nth-child(1) {
+  text-decoration: line-through;
+}
+.show_button {
+  width: 58%;
+  margin-top: -1.3em;
+}
+.content_border {
+  border-bottom: 1px solid;
 }
 /* =============== Social Sharing =============== */
 .social {
@@ -153,4 +189,18 @@
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+/* =============== Media Query =============== */
+@media screen and (max-width: 500px) {
+  .show_image, 
+  .show_content {
+    width: 100%;
+  }
+  .main_button {
+    margin-top: 1.3em;
+  }
+  .show_button {
+    margin-top: -1.2em;
+  }
 }
