--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -101,7 +101,7 @@ input, select, textarea {
   h3 {
     font-size: 1em;
     letter-spacing: 2px;
-    margin: 0 0 0.8em 0;
+    /*margin: 0 0 0.8em 0;*/
   }
   a {
     -moz-transition: color 0.25s ease-in-out, border-bottom-color 0.25s ease-in-out;
@@ -1131,7 +1131,7 @@ input, select, textarea {
     -ms-transition: opacity 0.25s ease-in-out;
     transition: opacity 0.25s ease-in-out;
     display: inline-block;
-    border: solid 6px #ebebeb !important;
+    /*border: solid 6px #ebebeb !important;*/
   }
     .image:hover {
       opacity: 0.9;
@@ -1616,9 +1616,9 @@ input, select, textarea {
     text-align: center;
     padding: 6em 0;
   }
-    #features p {
+    /*#features p {
       text-align: center;
-    }
+    }*/
     #features ul.actions {
       margin-top: 1.25em;
     }
