--- a/app/views/gadgets/_content.html.erb
+++ b/app/views/gadgets/_content.html.erb
@@ -1,12 +1,36 @@
 <div class="show_detail">
+
  <div class="show_image">
   <img src="<%= @gadget.gg_img %>">
+  <p><%= @gadget.gg_from %></p>
  </div>
+
  <div class="show_content">
+
   <h1><%= @gadget.gg_title %></h1>
   <h3>What's This?</h3>
   <p><%= @gadget.gg_intro %></p>
-  <p>by<%= @gadget.user.name %></p>
-  <a href="<%= @gadget.gg_url %>" class="button icon">$<%= @gadget.gg_aprice %> from <%= @gadget.gg_from %></a>
- </div>
-</div>
+  <p>by oh,i gotta buy this</p>
+  <!-- <p>by @gadget.user.name </p> -->
+
+  <div class="content_border"></div>
+
+  <div class="main_price_wrap">
+    <div class="main_price">
+      <p>$<%= @gadget.gg_aprice %></p>
+      <ul>
+        <li>$<%= @gadget.gg_bprice %></li> |
+        <li><%= @gadget.gg_sales %>% Off</li>
+      </ul>
+    </div>
+    <div class="show_button main_button">
+      <div class="col-12">
+        <ul class="show_btn actions">
+          <li><a href="<%= @gadget.gg_url %>" class="button">Check it Out</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+ </div><!--/.show_content-->
+</div><!--/.show_detail-->
