--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -169,7 +169,8 @@ input, select, textarea {
   }
     @media screen and (max-width: 1680px) {
       .container {
-        width: 68em;
+        /*width: 68em;*/
+        width: 1000px;
       }
     }
     @media screen and (max-width: 1280px) {
