--- a/app/views/gadgets/_procon.html.erb
+++ b/app/views/gadgets/_procon.html.erb
@@ -60,5 +60,9 @@
  </ul><br>
 
  <h2>Bottom Line</h2>
- <p><%= @gadget.gg_bottomline %></p>
+ <p><%= @gadget.gg_bottomline %></p><br/>
  <a href="<%= @gadget.gg_url %>" class="button icon">$<%= @gadget.gg_aprice %> from <%= @gadget.gg_from %></a>
+
+
+
+
