--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,8 +3,8 @@
   <div class="container">
 
     <!-- Logo -->
-      <h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-      <p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+      <h1 id="logo"><a href="/">Where Can I Get this?</a></h1>
+      <p>당신만 몰랐 던 그것!! 어디서 GET 할 수 있는지 내가 알려줄께.</p>
 
     <!-- Nav -->
       <nav id="nav">
