--- a/app/views/gadgets/_content.html.erb
+++ b/app/views/gadgets/_content.html.erb
@@ -24,7 +24,7 @@
   <div class="content_border"></div>
 
   <div class="main_price_wrap">
-    <div class="main_price">
+    <div class="main_price show_price">
       <p>$<%= @gadget.gg_aprice %></p>
       <ul>
         <li>$<%= @gadget.gg_bprice %></li> |
