--- a/app/views/gadgets/edit.html.erb
+++ b/app/views/gadgets/edit.html.erb
@@ -1,3 +1,8 @@
-<h1>This is Edit Page</h1>
-
-<%= render 'form' %>
+<div id="page-wrapper">
+ <%= render 'shared/header' %>
+  
+ <div class="gadget_form">
+  <%= render 'form' %>
+ </div>
+ 
+</div>
