--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -17,7 +17,10 @@
                 <div class="main_price_wrap">
                   <div class="main_price">
                     <p>$<%= gadget.gg_aprice %></p>
-                    <p>#<%= gadget.gg_from %></p>
+                    <ul>
+                     <li>#<%= gadget.gg_from %></p></li>   
+                     <li> <%= "#{ gadget.unique_impression_count }" %> views</li>   
+                    </ul>
                   </div>
                   <div class="main_button">
                     <div class="col-12">
@@ -31,7 +34,7 @@
             </div>
           <% end %>
 
-          <div class="col-4 col-6-medium col-12-small">
+          <!-- <div class="col-4 col-6-medium col-12-small">
             <section>
               <header>
                 <h3 class="main_title">이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과</h3>
@@ -75,7 +78,7 @@
                 </div>
               </div>
             </section>
-          </div>
+          </div> -->
 
         </div>
       </div>
