--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -245,6 +245,7 @@ input, select, textarea {
     }
     .row > .col-4 {
       width: 33.3333333333%;
+      margin-bottom: 3em;
     }
     .row > .off-4 {
       margin-left: 33.3333333333%;
