--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -4,15 +4,18 @@
   <!-- Features -->
     <section id="features">
       <div class="container">
-
         <div class="row aln-center">
+
+
           <% @gadgets.each do |gadget| %>
             <div class="col-4 col-6-medium col-12-small">
               <section>
                 <header>
                   <h3 class="main_title"><%= link_to gadget.gg_title, gadget %></h3>
                 </header>
+                
                 <%= link_to (image_tag gadget.gg_img), gadget, {:class =>"main_gadget image featured"} %>
+
                 <p class="main_intro"><%= gadget.gg_intro %></p>
                 <div class="main_price_wrap">
                   <div class="main_price">
@@ -33,8 +36,10 @@
               </section>
             </div>
           <% end %>
+          
 
-          <!-- <div class="col-4 col-6-medium col-12-small">
+        
+          <div class="col-4 col-6-medium col-12-small grid-item city" data-filter="city">
             <section>
               <header>
                 <h3 class="main_title">이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과</h3>
@@ -57,7 +62,7 @@
             </section>
           </div>
 
-          <div class="col-4 col-6-medium col-12-small">
+          <div class="col-4 col-6-medium col-12-small grid-item city" data-filter="city">
             <section>
               <header>
                 <h3 class="main_title">이름자 어머니, 슬퍼하는 별 계십니다</h3>
@@ -78,11 +83,133 @@
                 </div>
               </div>
             </section>
-          </div> -->
+          </div>
 
-        </div>
-      </div>
+           <div class="col-4 col-6-medium col-12-small grid-item city" data-filter="city">
+            <section>
+              <header>
+                <h3 class="main_title">이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과</h3>
+              </header>
+              <a href="#" class="main_gadget image featured"><img src="https://cdn.shopify.com/s/files/1/1196/9896/collections/Iphone_SmartWatch_1_8ac8d0c3-f3ea-4a25-84fd-f57b230d6096_580x.jpg?v=1503340748" alt="" /></a>
+              <p class="main_intro">이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과, 새겨지는 풀이 있습니다. 둘 것은 무엇인지 버리었습니다. 위에도 비둘기, 이제 헤는 걱정도 어머님, 버리었습니다. 토끼, 마리아 멀리 언덕 한 이름을 있습니다. 소녀들의 별을 걱정도 어머님, 아이들의 계십니다. 이제 이 아름다운 있습니다.</p>
+              <div class="main_price_wrap">
+                <div class="main_price">
+                  <p>$100.00</p>
+                  <p>#amazon.com</p>
+                </div>
+                <div class="main_button">
+                  <div class="col-12">
+                    <ul class="actions">
+                      <li><a href="#" class="button">Check it Out</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+
+          <div class="col-4 col-6-medium col-12-small grid-item cats" data-filter="cats">
+            <section>
+              <header>
+                <h3 class="main_title">이름자 어머니, 슬퍼하는 별 계십니다</h3>
+              </header>
+              <a href="#" class="main_gadget image featured"><img src="//source.unsplash.com/500x304" alt="" /></a>
+              <p class="main_intro">이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과, 새겨지는 풀이 있습니다. 둘 것은 무엇인지 버리었습니다. 위에도 비둘기, 이제 헤는 걱정도 어머님, 버리었습니다. 토끼, 마리아 멀리 언덕 한 이름을 있습니다. 소녀들의 별을 걱정도 어머님, 아이들의 계십니다. 이제 이 아름다운 있습니다.</p>
+              <div class="main_price_wrap">
+                <div class="main_price">
+                  <p>$100.00</p>
+                  <p>#amazon.com</p>
+                </div>
+                <div class="main_button">
+                  <div class="col-12">
+                    <ul class="actions">
+                      <li><a href="#" class="button">Check it Out</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+
+           <div class="col-4 col-6-medium col-12-small grid-item cats" data-filter="cats">
+            <section>
+              <header>
+                <h3 class="main_title">이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과</h3>
+              </header>
+              <a href="#" class="main_gadget image featured"><img src="https://cdn.shopify.com/s/files/1/1196/9896/collections/Iphone_SmartWatch_1_8ac8d0c3-f3ea-4a25-84fd-f57b230d6096_580x.jpg?v=1503340748" alt="" /></a>
+              <p class="main_intro">이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과, 새겨지는 풀이 있습니다. 둘 것은 무엇인지 버리었습니다. 위에도 비둘기, 이제 헤는 걱정도 어머님, 버리었습니다. 토끼, 마리아 멀리 언덕 한 이름을 있습니다. 소녀들의 별을 걱정도 어머님, 아이들의 계십니다. 이제 이 아름다운 있습니다.</p>
+              <div class="main_price_wrap">
+                <div class="main_price">
+                  <p>$100.00</p>
+                  <p>#amazon.com</p>
+                </div>
+                <div class="main_button">
+                  <div class="col-12">
+                    <ul class="actions">
+                      <li><a href="#" class="button">Check it Out</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+
+          <div class="col-4 col-6-medium col-12-small grid-item cats" data-filter="cats">
+            <section>
+              <header>
+                <h3 class="main_title">이름자 어머니, 슬퍼하는 별 계십니다</h3>
+              </header>
+              <a href="#" class="main_gadget image featured"><img src="//source.unsplash.com/500x304" alt="" /></a>
+              <p class="main_intro">이름자 어머니, 슬퍼하는 별 계십니다. 무엇인지 했던 가득 내 이런 어머니, 봅니다. 별빛이 마리아 가을로 밤이 프랑시스 까닭입니다. 때 봄이 이웃 내린 별에도 이름과, 새겨지는 풀이 있습니다. 둘 것은 무엇인지 버리었습니다. 위에도 비둘기, 이제 헤는 걱정도 어머님, 버리었습니다. 토끼, 마리아 멀리 언덕 한 이름을 있습니다. 소녀들의 별을 걱정도 어머님, 아이들의 계십니다. 이제 이 아름다운 있습니다.</p>
+              <div class="main_price_wrap">
+                <div class="main_price">
+                  <p>$100.00</p>
+                  <p>#amazon.com</p>
+                </div>
+                <div class="main_button">
+                  <div class="col-12">
+                    <ul class="actions">
+                      <li><a href="#" class="button">Check it Out</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+
+        </div><!--/.row aln-center-->
+      </div><!--/.container-->
     </section>
+<!-- 
+      <div class="isotopeclass">
+
+        <ul class="filters">
+          <li><a href="javascript:void(0);" data-filter="*">all</a></li>
+          <li><a href="javascript:void(0);" data-filter="city">city</a></li>
+          <li><a href="javascript:void(0);" data-filter="cats">cats</a></li>
+          <li><a href="javascript:void(0);" data-filter="test">test</a></li>
+        </ul>
+        
+          <div id="container" class="isotope">
+            <div class="grid-item city" data-filter="city">city1</div>
+            <div class="grid-item cats" data-filter="cats">cats2</div>
+            <div class="grid-item city" data-filter="city">city5</div>
+            <div class="grid-item cats" data-filter="cats">cats3</div>
+            <div class="grid-item city" data-filter="city">city5</div>
+            <div class="grid-item city" data-filter="city">city5</div>
+            <div class="grid-item city" data-filter="city">city4</div>
+            <div class="grid-item cats" data-filter="cats">cats1</div>
+            <div class="grid-item cats" data-filter="cats">cats1</div>
+            <div class="grid-item city" data-filter="city">city4</div>
+            <div class="grid-item city" data-filter="city">city2</div>
+            <div class="grid-item cats" data-filter="cats">cats1</div>
+            <div class="grid-item city" data-filter="city">city2</div>
+            <div class="grid-item test" data-filter="test">test</div>
+            <div class="grid-item test" data-filter="test">test</div>
+          </div>
+
+       </div> -->
+
    <!-- render 'gadgets/blog' -->
  <%= render 'shared/footer' %>
 </div><!-- /.page-wrapper -->
