--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -1,6 +1,10 @@
 
   <%= simple_form_for @gadget do |f| %>
-   
+
+   <div class="form_border">
+    <%= f.collection_select :category_id, Category.all, :id, :name, {promt: "Choose a category"} %>
+   </div>
+
    <div class="form_border">
     <%= f.input :gg_title, label: 'Title' %>
     <%= f.input :gg_intro, label: 'Intro' %>
